version 1.5

* Support for survival regression
* Better arguments / defaults for the main function "PTE_bootstrap_inference"
* Speed improvements
* Better documentation

version 1.0

* Initial Release