@@ -1,2 +1,0 @@
-YEAR: 2017
-COPYRIGHT HOLDER: Adam Kapelner, Alina Levine & Justin Bleich
