@@ -1,5 +1,6 @@
 # Generated by roxygen2: do not edit by hand
 
+S3method(print,PTE_bootstrap_results)
 S3method(summary,PTE_bootstrap_results)
 export(PTE_bootstrap_inference)
 import(graphics)
