@@ -28,13 +28,13 @@
 #'			plot = FALSE)
 #'	print(res)
 #' 
-#' @method summary PTE_bootstrap_results
+#' @method print PTE_bootstrap_results
 #' 
 #' @author Adam Kapelner
 #' @export
 print.PTE_bootstrap_results = function(x, ...){
 	cat("    I_adversarial observed est = ", 
-			round(x$observed_q_adversarial, 3), 
+			round(x$observed_q_scores$adversarial, 3), 
 			",  p val = ",
 			round(x$p_val_adversarial, 3), 
 			", \n      ",			
@@ -44,14 +44,17 @@ print.PTE_bootstrap_results = function(x, ...){
 			", ",
 			round(x$ci_q_adversarial[2], 3), 
 			"], ",
-			"BCa = [",
-			round(x$bca_ci_q_adversarial[1], 3), 
-			", ",
-			round(x$bca_ci_q_adversarial[2], 3), 
-			"],", 
+			ifelse(x$run_bca_bootstrap,
+				paste(
+					"BCa = [",
+					round(x$bca_ci_q_adversarial[1], 3), 
+					", ",
+					round(x$bca_ci_q_adversarial[2], 3), 
+					"],", 
+					""), sep = ""),  
 			sep = "")
 	cat("\n    I_random observed_est = ", 
-			round(x$observed_q_average, 3),
+			round(x$observed_q_scores$average, 3),
 			",  p val = ", 
 			round(x$p_val_average, 3),
 			", \n      ",
@@ -61,14 +64,17 @@ print.PTE_bootstrap_results = function(x, ...){
 			", ",
 			round(x$ci_q_average[2], 3), 
 			"], ",
-			"BCa = [",
-			round(x$bca_ci_q_average[1], 3), 
-			", ",
-			round(x$bca_ci_q_average[2], 3), 
-			"],",
+			ifelse(x$run_bca_bootstrap,
+				paste(
+					"BCa = [",
+					round(x$bca_ci_q_average[1], 3), 
+					", ",
+					round(x$bca_ci_q_average[2], 3), 
+					"],", sep = ""), 
+				""),
 			sep = "")
 	cat("\n    I_best observed_est = ", 
-			round(x$observed_q_best, 3), 
+			round(x$observed_q_scores$best, 3), 
 			",  p val = ",
 			round(x$p_val_best, 3),
 			", \n      ",
@@ -78,11 +84,14 @@ print.PTE_bootstrap_results = function(x, ...){
 			", ",
 			round(x$ci_q_best[2], 3),  
 			"], ",
-			"BCa = [",
-			round(x$bca_ci_q_best[1], 3), 
-			", ",
-			round(x$bca_ci_q_best[2], 3),  
-			"]", 
+			ifelse(x$run_bca_bootstrap,
+				paste(
+					"BCa = [",
+					round(x$bca_ci_q_best[1], 3), 
+					", ",
+					round(x$bca_ci_q_best[2], 3),  
+					"]", sep = ""), 
+				""),
 			sep = "")
 	cat("\n")  
 }
