@@ -26,24 +26,26 @@ pte_results = PTE_bootstrap_inference(X, y, censored = censored, regression_type
 
 ######## CONTINUOUS
 rm(list = ls())
-load("PTE/data/cpt1.RData")
+load("../PTE/data/cpt1.RData")
+X$site = NULL
 
 library(PTE)
 pte_results = PTE_bootstrap_inference(X, y, regression_type = "continuous", B = 200, y_higher_is_better = FALSE)
-
+pte_results
 
 
 ######## INCIDENCE
 
 rm(list = ls())
-load("PTE/data/cpt1.RData")
-y = ifelse(y > 15, 0, 1) #force incidence here
+load("../PTE/data/cpt1.RData")
+X$site = NULL
+y = ifelse(y > 15, 0, 1) #force incidence here and y=1 is better (not depressed)
 
 library(PTE)
 pte_results = PTE_bootstrap_inference(X, y, regression_type = "incidence", B = 200)
 pte_results = PTE_bootstrap_inference(X, y, regression_type = "incidence", incidence_metric = "risk_ratio", B = 200)
 pte_results = PTE_bootstrap_inference(X, y, regression_type = "incidence", incidence_metric = "probability_difference", B = 200)
-
+pte_results
 
 
 
